--- a/8_gradient_descent_cost_function.ipynb
+++ b/8_gradient_descent_cost_function.ipynb
@@ -22,7 +22,7 @@
       "metadata": {
         "id": "DGRx4cGADT3M"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -171,7 +171,7 @@
         "# MARIA\n",
         "- Iteration: 50 (cut it in half)\n",
         "- Learning rate: 0.16 (double learning rate)\n",
-        "- Cost impact: Cost much higher. Lowest cost at 35th iteration, but still at 1.59. Then started going back up.\n"
+        "- Cost impact: Cost much higher. Lowest cost at 1st iteration. High learning rate overshoots minimum.\n"
       ],
       "metadata": {
         "id": "wphv-vKiDe7A"
@@ -272,7 +272,7 @@
       "source": [
         "- Iteration: 100 (stayed same)\n",
         "- Learning rate: 0.04 (half learning rate)\n",
-        "- Cost impact: Cost much higher. Lowest cost at 99th iteration, but still not as low when using .08.\n"
+        "- Cost impact: Cost converging but higher. Lowest cost at 99th iteration, but still not as low when using .08. More iterations required.\n"
       ],
       "metadata": {
         "id": "6Bta2ISifKMl"
@@ -308,7 +308,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -459,7 +459,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
